--- a/SMS-Lambda/sms-lambda-iac.yaml
+++ b/SMS-Lambda/sms-lambda-iac.yaml
@@ -29,8 +29,8 @@ Resources:
       Handler: 'index.handler'
       Role: !GetAtt LambdaExecutionRole.Arn
       Code:
-        S3Bucket: 'nev-lambdas-code'
-        S3Key: 'function2.zip'
+        S3Bucket: 'your-s3-bucket'
+        S3Key: 'function.zip'
       Runtime: 'nodejs22.x'
       Timeout: 30
 
